@@ -213,7 +213,7 @@ public class SecondReloadLSPSchedulingTest {
 
 			while (true) {
 				Collections.shuffle(linkList);
-				Link pendingToLink = linkList.get(0);
+				Link pendingToLink = linkList.getFirst();
 				if ((pendingToLink.getFromNode().getCoord().getX() <= 18000 &&
 						pendingToLink.getFromNode().getCoord().getY() <= 4000 &&
 						pendingToLink.getFromNode().getCoord().getX() >= 14000 &&
@@ -228,7 +228,7 @@ public class SecondReloadLSPSchedulingTest {
 
 			while (true) {
 				Collections.shuffle(linkList);
-				Link pendingFromLink = linkList.get(0);
+				Link pendingFromLink = linkList.getFirst();
 				if (pendingFromLink.getFromNode().getCoord().getX() <= 4000 &&
 						pendingFromLink.getFromNode().getCoord().getY() <= 4000 &&
 						pendingFromLink.getToNode().getCoord().getX() <= 4000 &&
@@ -348,18 +348,18 @@ public class SecondReloadLSPSchedulingTest {
 
 			assertEquals("LOAD", planElements.get(0).getElementType());
 			assertTrue(planElements.get(0).getEndTime() >= (0));
-			assertTrue(planElements.get(0).getEndTime() <= (24*3600));
-			assertTrue(planElements.get(0).getStartTime() <= planElements.get(0).getEndTime());
-			assertTrue(planElements.get(0).getStartTime() >= (0));
-			assertTrue(planElements.get(0).getStartTime() <= (24*3600));
-			assertSame(planElements.get(0).getResourceId(), collectionResource.getId());
-			assertSame(planElements.get(0).getLogisticChainElement(), collectionElement);
+			assertTrue(planElements.getFirst().getEndTime() <= (24*3600));
+			assertTrue(planElements.getFirst().getStartTime() <= planElements.getFirst().getEndTime());
+			assertTrue(planElements.getFirst().getStartTime() >= (0));
+			assertTrue(planElements.getFirst().getStartTime() <= (24*3600));
+			assertSame(planElements.getFirst().getResourceId(), collectionResource.getId());
+			assertSame(planElements.getFirst().getLogisticChainElement(), collectionElement);
 		}
 
 		assertEquals(1, firstTranshipmentHubResource.getSimulationTrackers().size());
 		ArrayList<EventHandler> eventHandlers = new ArrayList<>(firstTranshipmentHubResource.getSimulationTrackers());
-		assertTrue(eventHandlers.iterator().next() instanceof TransshipmentHubTourEndEventHandler);
-		TransshipmentHubTourEndEventHandler reloadEventHandler = (TransshipmentHubTourEndEventHandler) eventHandlers.iterator().next();
+		assertTrue(eventHandlers.getFirst() instanceof TransshipmentHubTourEndEventHandler);
+		TransshipmentHubTourEndEventHandler reloadEventHandler = (TransshipmentHubTourEndEventHandler) eventHandlers.getFirst();
 		Iterator<Entry<CarrierService, TransshipmentHubTourEndEventHandler.TransshipmentHubEventHandlerPair>> iter = reloadEventHandler.getServicesWaitedFor().entrySet().iterator();
 
 		while (iter.hasNext()) {
@@ -385,8 +385,8 @@ public class SecondReloadLSPSchedulingTest {
 
 		assertEquals(1, secondTranshipmentHubResource.getSimulationTrackers().size());
 		eventHandlers = new ArrayList<>(secondTranshipmentHubResource.getSimulationTrackers());
-		assertTrue(eventHandlers.iterator().next() instanceof TransshipmentHubTourEndEventHandler);
-		reloadEventHandler = (TransshipmentHubTourEndEventHandler) eventHandlers.iterator().next();
+		assertTrue(eventHandlers.getFirst() instanceof TransshipmentHubTourEndEventHandler);
+		reloadEventHandler = (TransshipmentHubTourEndEventHandler) eventHandlers.getFirst();
 		iter = reloadEventHandler.getServicesWaitedFor().entrySet().iterator();
 
 		while (iter.hasNext()) {
@@ -419,8 +419,8 @@ public class SecondReloadLSPSchedulingTest {
 			ArrayList<LSPResource> resources = new ArrayList<>(lsp.getResources());
 
 			//CollectionTourEnd
-			assertTrue(eventHandlers.get(0) instanceof LSPTourEndEventHandler);
-			LSPTourEndEventHandler collectionEndHandler = (LSPTourEndEventHandler) eventHandlers.get(0);
+			assertTrue(eventHandlers.getFirst() instanceof LSPTourEndEventHandler);
+			LSPTourEndEventHandler collectionEndHandler = (LSPTourEndEventHandler) eventHandlers.getFirst();
 			assertSame(collectionEndHandler.getCarrierService().getLocationLinkId(), shipment.getFrom());
 			assertEquals(collectionEndHandler.getCarrierService().getCapacityDemand(), shipment.getSize());
 			assertEquals(collectionEndHandler.getCarrierService().getServiceDuration(), shipment.getDeliveryServiceTime(), 0.0);
@@ -428,12 +428,12 @@ public class SecondReloadLSPSchedulingTest {
 			assertSame(collectionEndHandler.getLogisticChainElement(), planElements.get(0).getLogisticChainElement());
 			assertSame(collectionEndHandler.getLogisticChainElement(), planElements.get(1).getLogisticChainElement());
 			assertSame(collectionEndHandler.getLogisticChainElement(), planElements.get(2).getLogisticChainElement());
-			assertSame(collectionEndHandler.getLogisticChainElement(), solutionElements.get(0));
+			assertSame(collectionEndHandler.getLogisticChainElement(), solutionElements.getFirst());
 			assertSame(collectionEndHandler.getLspShipment(), shipment);
 			assertSame(collectionEndHandler.getResourceId(), planElements.get(0).getResourceId());
 			assertSame(collectionEndHandler.getResourceId(), planElements.get(1).getResourceId());
 			assertSame(collectionEndHandler.getResourceId(), planElements.get(2).getResourceId());
-			assertSame(collectionEndHandler.getResourceId(), resources.get(0).getId());
+			assertSame(collectionEndHandler.getResourceId(), resources.getFirst().getId());
 
 			//CollectionServiceEnd
 			assertTrue(eventHandlers.get(1) instanceof CollectionServiceEndEventHandler);
@@ -445,12 +445,12 @@ public class SecondReloadLSPSchedulingTest {
 			assertSame(collectionServiceHandler.getElement(), planElements.get(0).getLogisticChainElement());
 			assertSame(collectionServiceHandler.getElement(), planElements.get(1).getLogisticChainElement());
 			assertSame(collectionServiceHandler.getElement(), planElements.get(2).getLogisticChainElement());
-			assertSame(collectionServiceHandler.getElement(), solutionElements.get(0));
+			assertSame(collectionServiceHandler.getElement(), solutionElements.getFirst());
 			assertSame(collectionServiceHandler.getLspShipment(), shipment);
 			assertSame(collectionServiceHandler.getResourceId(), planElements.get(0).getResourceId());
 			assertSame(collectionServiceHandler.getResourceId(), planElements.get(1).getResourceId());
 			assertSame(collectionServiceHandler.getResourceId(), planElements.get(2).getResourceId());
-			assertSame(collectionServiceHandler.getResourceId(), resources.get(0).getId());
+			assertSame(collectionServiceHandler.getResourceId(), resources.getFirst().getId());
 
 			//MainRunStart
 			assertTrue(eventHandlers.get(2) instanceof LSPTourStartEventHandler);
